--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "git submodule update --init --recursive && hugo --gc --minify"
+  command = "hugo --gc --minify"
   publish = "public"
 
 [context.production.environment]
