--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  command = "hugo --gc --minify"
-  publish = "public"
+command = "hugo --gc --minify --verbose --log --logFile=netlify-hugo.log"
+publish = "public"
 
-[context.production.environment]
-  HUGO_VERSION = ""0.135.0"
-  HUGO_ENV = "production"
+[build.environment]
+HUGO_VERSION = "0.152.0"
