update: 새 글 및 설정 수정

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ contentDir = "content"
 
   [[menu.main]]
   name = "Archive"     
-  pageRef = "/photo"
+  pageRef = "/photos"
     weight = 3
 
   [[menu.main]]
